# docs/swagger.json
@@ -72,31 +72,6 @@
                 "responses": {}
             }
         },
-        "/v1/images/get/{id}": {
-            "get": {
-                "description": "get single one",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "meta Manager"
-                ],
-                "summary": "get",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "The key for staticblock",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
         "/v1/images/param/getBaseData/": {
             "get": {
                 "description": "get architecture, release Version, output Format ,and default package name list",
@@ -282,7 +257,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.ImageInputData"
+                            "$ref": "#/definitions/models.BuildParam"
                         }
                     }
                 ],
@@ -291,6 +266,29 @@
         }
     },
     "definitions": {
+        "models.BuildParam": {
+            "type": "object",
+            "properties": {
+                "arch": {
+                    "type": "string"
+                },
+                "buildType": {
+                    "type": "string"
+                },
+                "customPkg": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "release": {
+                    "type": "string"
+                }
+            }
+        },
         "models.CreateUserInput": {
             "type": "object",
             "properties": {
@@ -415,29 +413,6 @@
                     "type": "string"
                 },
                 "zoneinfo": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.ImageInputData": {
-            "type": "object",
-            "properties": {
-                "arch": {
-                    "type": "string"
-                },
-                "buildType": {
-                    "type": "string"
-                },
-                "customPkg": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "release": {
                     "type": "string"
                 }
             }
